    (Michael McCandless)

  * LUCENE-2479: Added ability to provide a sort comparator for spelling suggestions along
    with two implementations.  The existing comparator (score, then frequency) is the default (Grant Ingersoll)

  * LUCENE-2608: Added the ability to specify the accuracy at method time in the SpellChecker.  The per class
    approach is also still available.  (Grant Ingersoll)

======================= Lucene 3.x (not yet released) =======================

Changes in backwards compatibility policy

 * LUCENE-2100: All Analyzers in Lucene-contrib have been marked as final.
   Analyzers should be only act as a composition of TokenStreams, users should
   compose their own analyzers instead of subclassing existing ones.
   (Simon Willnauer) 

 * LUCENE-2194, LUCENE-2201: Snowball APIs were upgraded to snowball revision
   502 (with some local modifications for improved performance). 
   Index backwards compatibility and binary backwards compatibility is 
   preserved, but some protected/public member variables changed type. This 
   does NOT affect java code/class files produced by the snowball compiler, 
   but technically is a backwards compatibility break.  (Robert Muir)
   
 * LUCENE-2226: Moved contrib/snowball functionality into contrib/analyzers.
   Be sure to remove any old obselete lucene-snowball jar files from your
   classpath!  (Robert Muir)
   
 * LUCENE-2323: Moved contrib/wikipedia functionality into contrib/analyzers.
   Additionally the package was changed from org.apache.lucene.wikipedia.analysis
   to org.apache.lucene.analysis.wikipedia.  (Robert Muir)

 * LUCENE-2581: Added new methods to FragmentsBuilder interface. These methods
   are used to set pre/post tags and Encoder. (Koji Sekiguchi)
    
Changes in runtime behavior

 * LUCENE-2117: SnowballAnalyzer uses TurkishLowerCaseFilter instead of
   LowercaseFilter to correctly handle the unique Turkish casing behavior if
   used with Version > 3.0 and the TurkishStemmer.